Fix MIME type error and update deployment configuration

--- a/vercel.json
+++ b/vercel.json
@@ -13,16 +13,20 @@
   ],
   "routes": [
     {
-      "src": "/assets/(.*)",
-      "headers": { "cache-control": "public, max-age=31536000, immutable" }
+      "src": "^/assets/(.*)",
+      "headers": { "cache-control": "public, max-age=31536000, immutable" },
+      "dest": "/assets/$1"
     },
     {
       "src": "^/favicon.ico",
       "dest": "/favicon.ico"
     },
     {
-      "src": "^/assets/(.*)",
-      "dest": "/assets/$1"
+      "src": "^/sw.js$",
+      "dest": "/sw.js",
+      "headers": {
+        "Content-Type": "application/javascript"
+      }
     },
     {
       "src": "^/admin(?:/(.*))?$",
@@ -32,8 +36,5 @@
       "src": "^/(.*)$",
       "dest": "/index.html"
     }
-  ],
-  "rewrites": [
-    { "source": "/(.*)", "destination": "/index.html" }
   ]
 }
