Fix image loading in production and update Vercel config

--- a/vercel.json
+++ b/vercel.json
@@ -13,8 +13,17 @@
   ],
   "routes": [
     {
+      "src": "^/gallery/(.*)",
+      "headers": { 
+        "cache-control": "public, max-age=31536000, immutable" 
+      },
+      "dest": "/gallery/$1"
+    },
+    {
       "src": "^/assets/(.*)",
-      "headers": { "cache-control": "public, max-age=31536000, immutable" },
+      "headers": { 
+        "cache-control": "public, max-age=31536000, immutable" 
+      },
       "dest": "/assets/$1"
     },
     {
