--- a/vercel.json
+++ b/vercel.json
@@ -13,6 +13,13 @@
   ],
   "routes": [
     {
+      "src": "^/images/(.*)",
+      "headers": { 
+        "cache-control": "public, max-age=31536000, immutable" 
+      },
+      "dest": "/images/$1"
+    },
+    {
       "src": "^/gallery/(.*)",
       "headers": { 
         "cache-control": "public, max-age=31536000, immutable" 
